[gd_scene load_steps=24 format=3 uid="uid://0dpnqfep462o"]

[ext_resource type="Script" path="res://vtuber.gd" id="1_h08pn"]
[ext_resource type="Texture2D" uid="uid://uiidet2jnnvo" path="res://Model Assets/Base/Base_Closed.png" id="2_ae3vt"]
[ext_resource type="Texture2D" uid="uid://cupft81hqtiv" path="res://Model Assets/Base/Base_Closed_Blink.png" id="3_egjn0"]
[ext_resource type="Texture2D" uid="uid://cc8hiyoecr2p8" path="res://Model Assets/Base/Based_Open.png" id="4_8iter"]
[ext_resource type="Texture2D" uid="uid://bhu7ybnt8chtb" path="res://Model Assets/Base/Based_Open_Blink.png" id="5_olsnk"]
[ext_resource type="Texture2D" uid="uid://d0kxw8vwa6uvm" path="res://Model Assets/Fear/Fear_Closed.png" id="6_ffy70"]
[ext_resource type="Texture2D" uid="uid://etwdo54kqhha" path="res://Model Assets/Fear/Fear_Closed_Blink.png" id="7_aufx3"]
[ext_resource type="Texture2D" uid="uid://cp8ih6csgal8r" path="res://Model Assets/Fear/Fear_Open.png" id="8_pmtm2"]
[ext_resource type="Texture2D" uid="uid://dc86jgu5h15ui" path="res://Model Assets/Fear/Fear_Open_Blink.png" id="9_hw2ce"]
[ext_resource type="Texture2D" uid="uid://dlbiouatwo5oa" path="res://Model Assets/Panic/Panic_Closed.png" id="10_0gt2m"]
[ext_resource type="Texture2D" uid="uid://ctvgv4oqagsjb" path="res://Model Assets/Goggles/Goggles_closed.png" id="10_ci41g"]
[ext_resource type="Texture2D" uid="uid://3ab2b6qnlebm" path="res://Model Assets/Goggles/Goggles_Open.png" id="11_0w84g"]
[ext_resource type="Texture2D" uid="uid://bsv4hqvtqqmi7" path="res://Model Assets/Panic/Panic_Closed_Blink.png" id="11_h422y"]
[ext_resource type="Texture2D" uid="uid://c2bkxe1yo2t7q" path="res://Model Assets/Panic/Panic_Open.png" id="12_plcq5"]
[ext_resource type="Texture2D" uid="uid://bbwxbjtlyeixk" path="res://Model Assets/Panic/Panic_Open_Blink.png" id="13_yqieu"]
[ext_resource type="Texture2D" uid="uid://dmnbnxd73o6xm" path="res://Model Assets/Starry/Starry_Closed.png" id="16_iqtt6"]
[ext_resource type="Texture2D" uid="uid://b22imaqnko8qc" path="res://Model Assets/Starry/Starry_Closed_Blink.png" id="17_ogs8p"]
[ext_resource type="Texture2D" uid="uid://dx112ukpu53cd" path="res://Model Assets/Starry/Starry_Open.png" id="18_legdx"]
[ext_resource type="Texture2D" uid="uid://dsx5paqrcp42v" path="res://Model Assets/Starry/Starry_Open_Blink.png" id="19_t2d0x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vmmy4"]
radius = 121.438
height = 368.876

[sub_resource type="AtlasTexture" id="AtlasTexture_b8yq2"]
atlas = ExtResource("5_olsnk")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_uxj2h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ae3vt")
}],
"loop": true,
"name": &"Base Closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_egjn0")
}],
"loop": true,
"name": &"Base Closed Blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8iter")
}],
"loop": true,
"name": &"Base Open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8yq2")
}],
"loop": true,
"name": &"Base Open Blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ffy70")
}],
"loop": true,
"name": &"Fear Closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_aufx3")
}],
"loop": true,
"name": &"Fear Closed Blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_pmtm2")
}],
"loop": true,
"name": &"Fear Open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_hw2ce")
}],
"loop": true,
"name": &"Fear Open Blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ci41g")
}],
"loop": true,
"name": &"Goggles Closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_0w84g")
}],
"loop": true,
"name": &"Goggles Open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_0gt2m")
}],
"loop": true,
"name": &"Panic Closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_h422y")
}],
"loop": true,
"name": &"Panic Closed Blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_plcq5")
}],
"loop": true,
"name": &"Panic Open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_yqieu")
}],
"loop": true,
"name": &"Panic Open Blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_iqtt6")
}],
"loop": true,
"name": &"Starry Closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_ogs8p")
}],
"loop": true,
"name": &"Starry Closed Blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_legdx")
}],
"loop": true,
"name": &"Starry Open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_t2d0x")
}],
"loop": true,
"name": &"Starry Open Blink",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lsak7"]
radius = 157.0
height = 818.0

[node name="Vtuber" type="CharacterBody2D"]
script = ExtResource("1_h08pn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.562531, 0.562531)
shape = SubResource("CapsuleShape2D_vmmy4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.8147e-06, -60.9995)
scale = Vector2(0.45, 0.45)
sprite_frames = SubResource("SpriteFrames_uxj2h")
animation = &"Starry Open"

[node name="scream_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_lsak7")

[node name="blink_timer" type="Timer" parent="."]

[connection signal="timeout" from="scream_timer" to="." method="_on_scream_timer_timeout"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
